# apathy-client

./: .rustfmt.toml  .travis.yaml  .travis.yml  Cargo.toml  README.md
src/: error.rs  main.rs
src/utility/: mod.rs  multiple_roblox.rs  request.rs
