[package]
name = "alts"
version = "0.1.0"
description = "Apathy Alt Utilities"
authors = ["EmperorParzival <29981946+EmperorParzival@users.noreply.github.com>"]
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
publish = false

[dependencies]
warp = "0.3"
chrono = "0.4"
hyper-tls = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["client", "runtime", "http1"] }

[target.'cfg(windows)'.dependencies]
process_list = "0.2"
winapi = { version = "0.3.9", features = ["synchapi"] }

[dev-dependencies]
rustfmt = "0.10"
clippy = "0.0.302"
cargo-edit = "0.7"
